# CppFetchers

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
FileFetcher/: CMakeLists.txt
FileFetcher/src/exec/: ArchiveOut.cpp  ArchiveOut.hpp  CURLStarter.cpp  CURLStarter.hpp  CertDownloader.cpp  CertDownloader.hpp  Downloader.cpp  Downloader.hpp  main.cpp
RepoFetcher/: CMakeLists.txt  RepoFetcher.cpp  RepoFetcher.h  readme.md
RepoFetcher/src/: CmakeBuilder.cpp  CmakeBuilder.hpp  CustomBuilder.cpp  CustomBuilder.hpp  FileHandler.cpp  FileHandler.hpp  GitCloner.cpp  GitCloner.hpp  GitHandler.cpp  GitHandler.hpp  Placeholders.cpp  Placeholders.hpp  ProcessDispatcher.cpp  ProcessDispatcher.hpp  Utils.cpp  Utils.hpp  main.cpp
RepoFetcher/src/exec/: main.cpp
RepoFetcher/src/lib/: Chunk.cpp  Chunk.hpp  CmakeBuilder.cpp  CmakeBuilder.hpp  CustomBuilder.cpp  FileHandler.cpp  FileHandler.hpp  GitHandler.cpp  MesonBuilder.cpp  MesonBuilder.hpp  Placeholders.cpp  ProcessDispatcher.cpp  ProcessDispatcher.hpp  RawBuffer.cpp  RawBuffer.hpp  Utils.cpp  Utils.hpp
file_recipes/: d3d12_sdk.file.json  image.file.json  make.file.json
patches/: archive.patch  curl.patch  nghttp2.patch
samples/: brotli.cmake.json  brotli_static.cmake.json  expat_static.cmake.json  ffmpeg.custom.json  flatbuffers.cmake.json  libarchive_static.cmake.json  libcurl.cmake.json  libcurl_static.cmake.json  lz4_static.cmake.json  lzma_static.cmake.json  nghttp2.cmake.json  nghttp2_static.cmake.json  openssl.custom.json  openssl_static.custom.json  qtbase.cmake.json  zlib.cmake.json  zlib_static.cmake.json  zstd.cmake.json  zstd_static.cmake.json
